# vil

./: .editorconfig  .gitignore  .gitmodules  .launch  .travis.yml  .vimspector.json  VkLayer_fuencaliente.json  VkLayer_fuencaliente.json.in  VkLayer_live_introspection.json.in  VkLayer_vlid.json.in  api.cpp  api.h  architecture.md  buffer.cpp  buffer.hpp  build.bat  bytes.hpp  cb.cpp  cb.hpp  commands.hpp  common.hpp  data.cpp  data.hpp  design.md  device.cpp  device.hpp  ds.cpp  ds.hpp  f16.cpp  f16.hpp  fwd.hpp  gui.cpp  gui.hpp  handle.cpp  handle.hpp  image.cpp  image.hpp  issues.md  layer.cpp  layer.hpp  (+30 more)
.github/workflows/: action.yml  ci.yml  sonar.yml
docs/: .gdbinit  compute-only.md  debug-utils-label-nesting.md  dependencies.md  design.md  display.md  done.md  env.md  faq.md  features.md  install.md  notes.md  performance.md  stash.cpp  stash.md  todo.md  valgrind.sup  vulkan_tools_helper_file_generator.py  wayland.md  windows-overlay.md
docs/example/: main.c  meson.build
docs/own/: README.md  accelStruct.md  commandUnion.hpp  cow.md  desc2.hpp  desc3.hpp  descriptorBuffer.md  design.md  done.md  ds2.hpp  ds3.hpp  eventLog.md  fmtio.md  gpu-shader-debug.md  gui.md  ideas.md  issues.md  lazyTracking.md  match.md  notes.md  saveImage.md  serialize.hpp  sparse.md  stash.cpp  stash.md  test.md  todo.md  usages.cpp  vertexCopy.md  vertexViewerCopy.md  workstack.md
docs/test/: bugged.hpp  localVector.cpp  meson.build  pv.cpp  rpsplit.cpp
imgui/: meson.build
include/: api.h  fuen_api.h  vil_api.h  vlid_api.h
src/: accelStruct.cpp  accelStruct.hpp  api.cpp  boundState.cpp  boundState.hpp  buffer.cpp  buffer.hpp  bytes.hpp  cb.cpp  cb.hpp  cbState.hpp  commandDesc.cpp  commandDesc.hpp  commandHook.cpp  commandHook.hpp  commands.cpp  commands.hpp  cow.cpp  cow.hpp  data.cpp  data.hpp  device.cpp  device.hpp  ds.cpp  ds.hpp  eventLog.hpp  exts.hpp  f16.cpp  fault.cpp  fault.hpp  flags.hpp  frame.hpp  fwd.hpp  gencmd.cpp  gencmd.hpp  guidraw.hpp  handle.cpp  handle.hpp  handles.hpp  image.cpp  (+67 more)
src/backward/: common.hpp  resolve.cpp  resolve.hpp  trace.cpp  trace.hpp
src/command/: alloc.cpp  alloc.hpp  builder.cpp  builder.hpp  commands.cpp  commands.hpp  desc.cpp  desc.hpp  match.cpp  match.hpp  record.cpp  record.hpp
src/commandHook/: copy.cpp  copy.hpp  hook.cpp  hook.hpp  record.cpp  record.hpp  state.hpp  submission.cpp  submission.hpp
src/data/: accelStructVertices.comp  blur.comp  common.glsl  copyTex.comp  copyVertices.comp  frustum.vert  gui.frag  gui.vert  histogram.comp  histogram.frag  histogram.glsl  histogram.vert  histogramMax.comp  histogramPost.comp  histogramPrepare.comp  image.frag  imagebg.frag  imagebg.vert  meson.build  minmax.comp  overlay.vert  processIndices.comp  readTex.comp  sample.glsl  shaderTable.comp  vertexCopy.glsl  vertices.frag  vertices.vert  writeIndexCmd.comp  writeVertexCmd.comp  writeVertexCmdDirect.comp  writeVertexCmdIndexed.comp
src/data/prebuilt/: accelStructVertices.comp.spv.h  blur.comp.spv.h  copyTex.comp.1DArray.noformat.spv.h  copyTex.comp.1DArray.spv.h  copyTex.comp.2DArray.noformat.spv.h  copyTex.comp.2DArray.spv.h  copyTex.comp.2DMSArray.noformat.spv.h  copyTex.comp.2DMSArray.spv.h  copyTex.comp.3D.noformat.spv.h  copyTex.comp.3D.spv.h  copyTex.comp.i1DArray.noformat.spv.h  copyTex.comp.i1DArray.spv.h  copyTex.comp.i2DArray.noformat.spv.h  copyTex.comp.i2DArray.spv.h  copyTex.comp.i2DMSArray.noformat.spv.h  copyTex.comp.i2DMSArray.spv.h  copyTex.comp.i3D.noformat.spv.h  copyTex.comp.i3D.spv.h  copyTex.comp.u1DArray.noformat.spv.h  copyTex.comp.u1DArray.spv.h  copyTex.comp.u2DArray.noformat.spv.h  copyTex.comp.u2DArray.spv.h  copyTex.comp.u2DMSArray.noformat.spv.h  copyTex.comp.u2DMSArray.spv.h  copyTex.comp.u3D.noformat.spv.h  copyTex.comp.u3D.spv.h  copyVertices.comp.vert32.idx16.spv.h  copyVertices.comp.vert32.idx32.spv.h  copyVertices.comp.vert8.idx16.spv.h  copyVertices.comp.vert8.idx32.spv.h  frustum.vert.spv.h  gui.frag.spv.h  gui.vert.spv.h  histogram.comp.1DArray.spv.h  histogram.comp.2DArray.spv.h  histogram.comp.2DMSArray.spv.h  histogram.comp.3D.spv.h  histogram.comp.i1DArray.spv.h  histogram.comp.i2DArray.spv.h  histogram.comp.i2DMSArray.spv.h  (+58 more)
src/gui/: arimo.cpp  arimo.hpp  blur.cpp  blur.hpp  buffer.cpp  buffer.hpp  bufferRead.cpp  bufferRead.hpp  bufferViewer.cpp  bufferViewer.hpp  cb.cpp  cb.hpp  command.cpp  command.hpp  commandDisplay.hpp  commandHook.cpp  commandHook.hpp  commandSelection.cpp  commandSelection.hpp  events.cpp  events.hpp  fontAwesome.hpp  fonts.cpp  fonts.hpp  gui.cpp  gui.hpp  image.cpp  image.hpp  imageViewer.cpp  imageViewer.hpp  pipes.cpp  render.cpp  render.hpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  shader.cpp  shader.hpp  shaderEmulation.cpp  (+6 more)
src/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  meson.build  textedit.cpp  textedit.h
src/serialize/: bufs.hpp  commands.cpp  handles.cpp  internal.hpp  serialize.cpp  serialize.hpp  util.hpp
src/spirv-cross/: spirv.h  spirv.hpp  spirv_cross.cpp  spirv_cross.hpp
src/spvm/: analyzer.h  context.c  context.h  image.c  image.h  opcode.h  opcode_execute.c  opcode_setup.c  program.c  program.h  result.c  result.h  spirv.h  state.c  state.h  types.c  types.h  value.c  value.h
src/standalone/: entry.cpp  main.cpp
src/test/: approx.hpp  bufferAddress.cpp  bufparse.cpp  bugged.cpp  bugged.hpp  localVector.cpp  main.cpp  patchtest.cpp  rpsplit.cpp  xfb.cpp
src/tracy/: Tracy.hpp  TracyClient.cpp
src/util/: allocation.hpp  buffmt.cpp  buffmt.hpp  bufparser.cpp  bytes.hpp  callstack.cpp  callstack.hpp  camera.hpp  chain.cpp  chain.hpp  debugMutex.hpp  dl.cpp  dl.hpp  dlg.hpp  export.hpp  ext.cpp  ext.hpp  f16.cpp  f16.hpp  fmt.cpp  fmt.hpp  handleCast.hpp  intrusive.hpp  linalloc.cpp  linalloc.hpp  list.hpp  mat.hpp  matOps.hpp  ownbuf.cpp  ownbuf.hpp  patch.cpp  patch.hpp  profiling.hpp  quaternion.hpp  span.hpp  spirv.hpp  (+10 more)
subprojects/: dlg.wrap  imgio.wrap  nytl.wrap  pml.wrap  spc.wrap  swa.wrap  vkmockicd.wrap  zlib.wrap
(+67 files in other folders)
