# whether to build with support for x11 hooked overlays
# disabled by default on windows
# even when this is false, allows to create overlays via the API or
# use vil in a separate window on x11
option('x11-hook', type: 'boolean', value: true)

# whether to build the example
option('example', type: 'boolean', value: false)

# whether to build the tests
# NOTE: due to technical reasons, the tests are compiled into the layer 
# library itself. Disabling this should slightly decrease the size of the library
option('unit-tests', type: 'boolean', value: false)
option('integration-tests', type: 'boolean', value: false)

# whether to build with tracy for profiling
option('tracy', type: 'boolean', value: false)

# whether to use the absolute build path in the layer json
# useful e.g. to run the integration tests without installing, as we
# do in ci
option('json-config-absolute-path', type: 'boolean', value: false)

# Whether to throw on failed assertion.
# Mainly used for static analysis, to make it assume the conditions
# we assert on.
option('throw-on-assert', type: 'boolean', value: false)
