rpsplit = executable('rpsplit', 'rpsplit.cpp',
	include_directories: inc,
	cpp_args: args,
	dependencies: dep_dlg,
	link_with: vil_layer)
test('rpsplit', rpsplit)


rpsplit = executable('localVector', 'localVector.cpp',
	include_directories: inc,
	cpp_args: args,
	dependencies: dep_dlg,
	link_with: vil_layer)
test('localVector', rpsplit)
